Fix annoying (dis)appearance of the sidebar when switching between portrait and lanscape on small screens

--- a/doc-tool/resources/css/sidebar.css
+++ b/doc-tool/resources/css/sidebar.css
@@ -114,7 +114,7 @@
   background: linear-gradient(45deg, #2c6c8d 49%, #19aacf 51%);
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
   .sidebar { /* visible by default, hidden by toggle */
     width: 320px;
     visibility: visible;
